<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seasel"
        android:textSize="36sp"
        android:layout_marginBottom="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/loginEmail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="60dp"
        android:background="@drawable/bg_input_text"
        android:gravity="center"
        android:hint="@string/e_mail"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="60dp"
        android:background="@drawable/bg_input_text"
        android:gravity="center"
        android:hint="@string/password"
        android:textSize="18sp"
        android:layout_marginTop="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginEmail" />

    <TextView
        android:id="@+id/loginEnterButton"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:textSize="18sp"
        android:background="@drawable/bg_login_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginPassword"
        android:layout_marginTop="14dp"
        android:layout_marginHorizontal="60dp"
        android:text="@string/login"
        android:gravity="center"
        android:textColor="@color/white" />




</androidx.constraintlayout.widget.ConstraintLayout>