<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/login_app_title"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@id/loginEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/loginTitleImage"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/loginTitleImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:src="@drawable/ic_key"
        app:layout_constraintBottom_toTopOf="@id/loginEmail"
        app:layout_constraintEnd_toStartOf="@id/loginTitle"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="60dp"
        android:background="@drawable/bg_input_text"
        android:gravity="center"
        android:hint="@string/login_hint_email"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/loginPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/bg_input_text"
        android:gravity="center"
        android:hint="@string/login_hint_password"
        android:inputType="textPassword"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginEmail"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/loginEnterButton"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_login_button"
        android:gravity="center"
        android:text="@string/login_submit_button"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_bold"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginPassword" />

    <ProgressBar
        android:id="@+id/loginProgress"
        android:theme="@style/ProgressBar.White"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="4dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/loginEnterButton"
        app:layout_constraintEnd_toEndOf="@id/loginEnterButton"
        app:layout_constraintBottom_toBottomOf="@id/loginEnterButton"
        app:layout_constraintTop_toTopOf="@id/loginEnterButton"/>


</androidx.constraintlayout.widget.ConstraintLayout>