<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/sendMarkTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/repetition_dialog_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sendMarkMark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:textColor="@color/main_blue"
        android:textSize="24sp"
        tools:text="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sendMarkTitle" />

    <TextView
        android:id="@+id/sendMarkMarkCancel"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="7dp"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="13dp"
        android:background="@drawable/bg_login_button"
        android:gravity="center"
        android:text="@string/repetition_dialog_button_cancel"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_bold"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/sendMarkMarkConfirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sendMarkMark"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/sendMarkMarkConfirm"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="14dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="13dp"
        android:background="@drawable/bg_login_button"
        android:gravity="center"
        android:text="@string/repetition_dialog_button_confirm"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_bold"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/sendMarkMarkCancel"
        app:layout_constraintTop_toBottomOf="@id/sendMarkMark"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>