<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/feedbackTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/feedback_title"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/feedbackBackButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_back"
        android:scaleType="center"
        app:layout_constraintDimensionRatio="1:1"
        android:background="@drawable/bg_ripple_borderless"
        app:layout_constraintBottom_toBottomOf="@id/feedbackTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="@id/feedbackTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RatingBar
        android:id="@+id/feedbackRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:theme="@style/MyRatingBar.Small"
        android:isIndicator="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/feedbackTitle"
        tools:rating="3.5" />

    <EditText
        android:id="@+id/feedbackComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_input_text"
        android:gravity="top"
        android:hint="@string/feedback_hint_comment"
        android:lines="6"
        android:maxLines="6"
        android:padding="12dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/feedbackRating" />

    <TextView
        android:id="@+id/feedbackSendButton"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_login_button"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/feedback_submit_button"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/feedbackComment" />


</androidx.constraintlayout.widget.ConstraintLayout>